--- a/style.css
+++ b/style.css
@@ -35,7 +35,7 @@ h2{
 #container{
     border: 1px solid gainsboro;
     max-width: 15%;
-    position: relative;
+    position: fixed;
     /*max-width: 600px;*/
     background: #fff;
     text-align: center;
