--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body{
 }
 h1{
     color: #69c2ea;
-    margin-bottom: 0;
+    margin: 0;
     font-size: 1.5em;
 }
 #shamsiDate{
@@ -20,13 +20,13 @@ h2{
     margin-top: 0;
 }
 
-.miladi{
-    margin-bottom: 0;
-}
 .today{
     cursor: pointer;
-    text-decoration: none;
+    border: 0;
+    background: 0;
     padding: .5em 1em;
+    font-family: inherit;
+    font-size: 1em;
     
 }
 .today:hover{
@@ -84,7 +84,7 @@ header{
 }
 .actions {
     display: flex;
-    width: 100%;
+    width: 90%;
     justify-content: space-between;
     position: absolute;
     
@@ -103,6 +103,11 @@ header{
     font-size: .75em;
     width: 2em;
     height: 2em;
+}
+.actions button:hover,
+.actions button:focus{
+    background-color: #69c2ea;
+    color: #555;
 }
 #nextMonth {
     margin-left: 20px;
@@ -127,20 +132,11 @@ header{
     flex-direction: column;
     justify-content: space-between;
     padding: .5em;
-    width: 15%;
+    width: 10%;
+    position: fixed;
+    top: inherit;
+    margin-left: 2em;
 }
-#overlay {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  }
 
 select{
     padding:.5em;
@@ -149,8 +145,9 @@ select{
     cursor: inherit;
     line-height: inherit;
     width: 90%;
-    font-size: .65em;
+    font-size: 1em;
     margin-bottom: .5em;
+    text-align: center;
 }
 .modalBtn{
     background: #555;
@@ -160,10 +157,17 @@ select{
     color: #69c2ea;
     text-align: center;
     margin: 0;
-    font-size: .65em;
+    font-size: 1em;
     width: 65%;
+    font-family: inherit;
+    cursor: pointer;
+    border: 0;
 }
-
+.modalBtn:hover,
+.modalBtn:focus{
+    background: #69c2ea;
+    color: #555;
+}
 .datepicker{
     position: absolute;
 }
